--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,18 @@
       </span>
     </mat-error>
   </mat-form-field>
+  <mat-form-field class="example-full-width" appearance="fill">
+    
+    <mat-label>
+      tipo
+    </mat-label>
+      <mat-select placeholder="Tipo de pregunta" formControlName="tipo">
+        <mat-option *ngFor="let tipo of tiposDePregunta" [value]="tipo">
+          {{tipo.descripcion}}
+        </mat-option>
+      </mat-select>
+
+  </mat-form-field>
   
   <button mat-raised-button color="primary" [disabled]="!nuevaPregunta.valid" (click)="addPregunta()">
     Agregar pregunta
