--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -511,3 +511,37 @@ $totalLen: $num1Len + $num2Len + $num3Len + $numJoin1-2 + $numJoin2-3 +
     opacity: 0;
   }
 }
+
+@media only screen and (max-width: 1366px) {
+    .demo1 {
+       position: absolute;
+       margin: 0;
+  left: 50%;
+  //top: 10%;
+  //width: 10%;
+  height: 50%;
+  //margin-top: $size / -2;
+  padding: $pad;
+  //border-radius: 20px;
+  transform: translateX(-50%);
+
+
+  &__text {
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    width: 100%;
+    height: 50%;
+    margin-left: $sizeBig/-2;
+    text-align: center;
+    line-height: $size;
+    font-size: 10px;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transform: translateX(10px);
+    
+    animation: hideText $totalAT ;
+  }
+    }
+  }
