--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -171,104 +171,7 @@ body {
 
 
 
-.demo {
-  position: absolute;
-  
-  left: 50%;
-  top: 10%;
-  width: 100%;
-  height: 50%;
-  //margin-top: $size / -2;
-  padding: $pad;
-  border-radius: 20px;
-  transform: translateX(-50%);
 
-  &__colored-blocks {
-    overflow: hidden;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    width: $sizeBig;
-    height: 100%;
-    margin-left: $sizeBig/-2;
-    padding: $pad;
-    border-radius: $contBr;
-    perspective: 1000px;
-    //animation: demoAnim $totalAT ease-in-out infinite, contAnim $totalAT infinite;
-
-    &-rotater {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      border-radius: inherit;
-      animation: rotation 0.7s linear infinite;
-    }
-
-    &-inner {
-      overflow: hidden;
-      position: relative;
-      height: 100%;
-      background: $bgColor;
-      border-radius: inherit;
-    }
-  }
-
-  &__colored-block {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 300%;
-    height: 300%;
-    transform-origin: 0 0;
-
-    @for $i from 1 through $numOfColBlocks {
-      &:nth-child(#{$i}) {
-        $rt: $deg * ($i - 1);
-        $skew: 90deg - $deg;
-        transform: rotate($rt) skewX($skew);
-        background-color: map-get($blocksColors, $i);
-      }
-    }
-  }
-
-  &__inner {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-
-
-
-  &__text {
-    
-    position: absolute;
-    //left: 50%;
-    top: 10%;
-    width: 95%;
-    height: 50%;
-    //margin-left: $sizeBig/-2;
-    text-align: center;
-    line-height: $size;
-    font-size: 30px;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    transform: translateX(10px);
-    
-    animation: hideText $totalAT ;
-  }
-}
-
-
-
-@keyframes rotation {
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
 
@@ -474,6 +377,7 @@ $totalLen: $num1Len + $num2Len + $num3Len + $numJoin1-2 + $numJoin2-3 +
 }
 
 @keyframes demoAnim {
+  
   15% {
     border-radius: $contBr;
     transform: rotate(0);
@@ -536,7 +440,7 @@ $totalLen: $num1Len + $num2Len + $num3Len + $numJoin1-2 + $numJoin2-3 +
     //margin-left: $sizeBig/-2;
     text-align: center;
     line-height: $size;
-    font-size: 30px;
+    font-size: 20px;
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -587,6 +491,30 @@ $totalLen: $num1Len + $num2Len + $num3Len + $numJoin1-2 + $numJoin2-3 +
       background-size: 100%;
       position: absolute;
   right:    0;
+  bottom:   0;
+      transition: background 0.3s ease-in-out;
+    }
+
+
+    .fire {
+      font-family: 'Nunito', sans-serif;
+      font-size: 20px;
+      text-transform: uppercase;
+      font-weight: 350;
+      color: #ffffff;
+      background: #e8f402;
+      border: none;
+      border-radius: 1000px;
+      box-shadow: 12px 12px 24px rgba(69, 137, 239, 0.64);
+      transition: all 0.3s ease-in-out 0s;
+      cursor: pointer;
+      outline: none;
+      //position: relative;
+      padding: 10px;
+      
+      background-size: 100%;
+      position: absolute;
+  right:    50%;
   bottom:   0;
       transition: background 0.3s ease-in-out;
     }
