se agregaron preguntas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
     <input matInput placeholder="Pregunta?" name="pregunta" formControlName="pregunta">
     <mat-error>
       <span *ngIf="nuevaPregunta.controls['pregunta'].hasError('required')">
-        El Nombre es obligatorio
+        La pregunta es obligatorio
       </span>
     </mat-error>
   </mat-form-field>
