--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,21 @@
+.home {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 .wrap {
     height: 100%;
@@ -519,3 +537,165 @@ $totalLen: $num1Len + $num2Len + $num3Len + $numJoin1-2 + $numJoin2-3 +
       transition: background 0.3s ease-in-out;
     }
   }
+
+
+
+
+/*.fire {
+  font-family: 'Nunito', sans-serif;
+      font-size: 20px;
+      text-transform: uppercase;
+      font-weight: 350;
+      color: #ffffff;
+      background: #e8f402;
+      border: none;
+      border-radius: 1000px;
+      box-shadow: 12px 12px 24px rgba(69, 137, 239, 0.64);
+      transition: all 0.3s ease-in-out 0s;
+      cursor: pointer;
+      outline: none;
+      //position: relative;
+      padding: 10px;
+      
+      background-size: 100%;
+      position: absolute;
+  right:    50%;
+  bottom:   0;
+  
+  &:hover {
+    // box-shadow: 0 0 20px 10px rgba(230, 30, 10, 0.6);
+    animation: burn 1000ms ease-out forwards;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      left: 40px;
+      width: 100px;
+      height: 40px;
+      background: rgba(255, 230, 110, 1);
+      border-radius: 100%;
+      animation: flare 1000ms ease-out forwards;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      right: 40px;
+      width: 100px;
+      height: 40px;
+      background: rgba(255, 230, 110, 1);
+      border-radius: 100%;
+      animation: flare 1000ms ease-out forwards;
+    }
+  }
+}
+
+@keyframes flare {
+  100% {
+    transform: translateY(-20px) scale(1.5);
+    filter: blur(10px);
+    opacity: 0;
+  }
+}
+
+@keyframes burn {
+  0% {
+    color: rgba(255, 130, 110, 1);
+    background: rgba(255, 230, 110, 1);
+    box-shadow:
+      0 0 5px 0 rgba(200, 0, 10, 1),
+      0 0 5px 0 rgba(230, 30, 10, 0.8),
+      0 0 5px 0 rgba(230, 230, 10, 0.6);
+  }
+  
+  100% {
+    color: rgba(0, 0, 0, 1);
+    background: rgba(255, 255, 255, 1);
+    box-shadow:
+      0 -35px 40px 30px rgba(255, 130, 10, 0),
+      0 -30px 30px 10px rgba(230, 30, 10, 0),
+      0 -20px 10px 0 rgba(255, 255, 10, 0);
+  }
+}
+
+}*/
+@media only screen and (max-width: 600px) {
+  .sns-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 20%;
+    margin-top: 7%;
+    //margin-left: 7%;
+    border-radius: 50%;
+    border: none;
+    transition-duration: .5s;
+    //transform: rotateX(45deg);
+    box-shadow: 0px 10px 5px rgba(0, 0, 0, .3);
+    cursor: pointer;
+      background-color: #52ef09;
+    
+  
+    &:hover {
+      transform: scale(1.2);
+      box-shadow: none;
+    }
+  }
+}
+.sns-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 70px;
+	width: 70px;
+  margin-top: 3%;
+	border-radius: 50%;
+	border: none;
+	transition-duration: .5s;
+	//transform: rotateX(45deg);
+	box-shadow: 0px 10px 5px rgba(0, 0, 0, .3);
+	cursor: pointer;
+		background-color: #52ef09;
+	
+
+	&:hover {
+		transform: scale(1.2);
+		box-shadow: none;
+	}
+}
+.nuevaPregunta{
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 70px;
+	width: 70px;
+  margin-top: 3%;
+  //margin-left: 3%;
+	border-radius: 50%;
+	border: none;
+	transition-duration: .5s;
+	//transform: rotateX(45deg);
+	box-shadow: 0px 10px 5px rgba(0, 0, 0, .3);
+	cursor: pointer;
+		background-color: #09aeef;
+	
+
+	&:hover {
+		transform: scale(1.2);
+		box-shadow: none;
+	}
+}
+
+
+.field {
+	display: flex;
+	width: 330px;
+	justify-content: space-around;
+  height: 100%;
+	width: 100%;
+	margin: 0;
+	display: flex;
+	//justify-content: center;
+	align-items: center;
+}
