--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
+  
 }
 
 @keyframes gradient {
@@ -20,6 +21,7 @@
 .wrap {
     height: 100%;
     display: flex;
+    margin-top: 10%;
     align-items: center;
     justify-content: center;
   }
