--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,74 +1,61 @@
 <div class="home">
-  
+  <div class="titulo">
+  <H1 *ngIf="modo=='mayormenor'">MAYOR MENOR A 12</H1>
+  <H1 *ngIf="modo=='nombreAleatorio'">NOMBRE ALEATORIO</H1>
+  <H1 *ngIf="modo=='barquito'">BARQUITO ⛵️</H1>
+  <H1 *ngIf="modo=='modoJugar'">JUEGO VARIADO</H1>
+  <H1 *ngIf="modo=='yoNunca'">YO NUNCA 🔙</H1>
+
+
+</div>
 <div *ngIf="!jugando">
   <div class="field"> 
   <a class="sns-btn" (click)="nuevopj()">
 		<i style="font-size: 250%;">🙋‍♂️</i>
 	</a>
+  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="mayormenor()">
+      🃏
+      <span>Mayor - menor</span>
+    </button>
+    <button mat-menu-item (click)="randomName()">
+      <mat-icon>🤔</mat-icon>
+      <span>Nombre aleatorio</span>
+    </button>
+    <button mat-menu-item (click)="barquito()">
+      <mat-icon>⛵️</mat-icon>
+      <span>Barquito</span>
+    </button>
+    <button mat-menu-item (click)="yoNunca()">
+      <mat-icon>🤫</mat-icon>
+      <span>Yo nunca</span>
+    </button>
+  </mat-menu>
   <a class="nuevaPregunta" (click)="nuevaPreg()">
 		<i style="font-size: 250%;">📝</i>
 	</a>
 </div>
-  <!--
-<form [formGroup]="nuevaPersona" align="center">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Nombre</mat-label>
-    <input matInput placeholder="Enter your name" name="usename" formControlName="nombre">
-    <mat-error>
-      <span *ngIf="nuevaPersona.controls['nombre'].hasError('required')">
-        El Nombre es obligatorio
-      </span>
-    </mat-error>
-  </mat-form-field>
- 
   
-  <button mat-raised-button color="primary" [disabled]="!nuevaPersona.valid" (click)="addPersona()">
-    Agregar persona
-  </button>
-
-</form>
-
-
-<form [formGroup]="nuevaPregunta" align="center">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Pregunta</mat-label>
-    <input matInput placeholder="Pregunta?" name="pregunta" formControlName="pregunta">
-    <mat-error>
-      <span *ngIf="nuevaPregunta.controls['pregunta'].hasError('required')">
-        La pregunta es obligatorio
-      </span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width" appearance="fill">
-    
-    <mat-label>
-      tipo
-    </mat-label>
-      <mat-select placeholder="Tipo de pregunta" formControlName="tipo">
-        <mat-option *ngFor="let tipo of tiposDePregunta" [value]="tipo.id">
-          {{tipo.descripcion}}
-        </mat-option>
-      </mat-select>
-
-  </mat-form-field>
-  
-  <button mat-raised-button color="primary" [disabled]="!nuevaPregunta.valid" (click)="addPregunta()">
-    Agregar pregunta
-  </button>
-
-</form>
--->
 <h1 style="text-align: center;">
   Jugadores
 </h1>
+
+
+
+
+
+
 
 <table align="center">
 
   <tr >
 
-    <td *ngFor="let persona of nosotros" align="center">{{persona.nombre}}
+    <td *ngFor="let persona of nosotros" align="center" >{{persona.nombre}}
       <tr > 
-    <td><button mat-raised-button color="secundary" (click)="participantes.splice(persona,1);">❌</button></td>
+    <td><button mat-raised-button color="secundary" style="width: 1px;" (click)="nosotros.splice(persona,1);">❌</button></td>
       </tr>
     
     </td>
@@ -82,7 +69,7 @@
   </tr>
 </table>
 <div class="wrap" *ngIf="!jugando">
-  <button (click)="random()" class="button_start">Jugar</button>
+  <button (click)="random(); modo='modoJugar'" class="button_start">Jugar</button>
 </div>
 </div>
 
@@ -106,7 +93,10 @@
       <div class="demo1__colored-block"></div>
     </div>
     <div class="demo1__colored-blocks-inner"></div>
-    <div class="demo1__text">{{p}}</div>
+    <div *ngIf="modo=='modoJugar' || modo=='barquito' || modo=='yoNunca'" class="demo1__text">{{p}}</div>
+    <div *ngIf="modo=='mayormenor'" class="demo1__text" style="font-size: 150px;">{{p}}</div>
+    <div  *ngIf="modo=='nombreAleatorio'" class="demo1__text" style="font-size: 65px;">{{p}}</div>
+
     
   </div>
   <div class="demo1__inner">
@@ -134,10 +124,10 @@
 
 
 </div>
-<button (click)="jugando=false; pregunta=''" class="back">
+<button (click)="jugando=false; pregunta=''; modo=''" class="back">
   Parar
 </button>
-<button (click)="fire()" class="fire">
+<button (click)="fire()" *ngIf="modo=='modoJugar'" class="fire" >
   🔥
 </button>
 
