--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -194,6 +194,29 @@ body {
 
 
 
+.fire {
+  font-family: 'Nunito', sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 350;
+  color: #ffffff;
+  background: #e8f402;
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(69, 137, 239, 0.64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  //position: relative;
+  padding: 10px;
+  
+  background-size: 100%;
+  position: absolute;
+right:    50%;
+bottom:   0;
+  transition: background 0.3s ease-in-out;
+}
+
 
 
 
@@ -701,3 +724,44 @@ $totalLen: $num1Len + $num2Len + $num3Len + $numJoin1-2 + $numJoin2-3 +
 	//justify-content: center;
 	align-items: center;
 }
+
+
+$avatar-size: 32px;
+$body-background: #353535;
+
+@font-face {
+	font-family: "ubuntu";
+	font-style: italic;
+	font-weight: 300;
+	src: local("Lato Light Italic"), local("Lato-LightItalic"),
+		url(https://fonts.gstatic.com/s/ubuntucondensed/v8/u-4k0rCzjgs5J7oXnJcM_0kACGMtT-Dfqw.woff2)
+			format("woff2");
+}
+
+
+
+
+
+.titulo {
+	text-align: center;
+	h1 {
+		color: #fff;
+		font-size: 30px;
+		text-transform: uppercase;
+		font-weight: 700;
+		font-family: "Josefin Sans", sans-serif;
+		//background: #efefbb; /* fallback for old browsers */
+  //background: -webkit-linear-gradient(to right, #efefbb, #d4d3dd); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #efefbb, #d4d3dd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */background-size: auto auto;
+		background-clip: border-box;
+		background-size: 200% auto;
+		color: #fff;
+		background-clip: text;
+		text-fill-color: transparent;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		animation: textclip 1.5s linear infinite;
+		display: inline-block;
+	}
+}
+
