--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,9 +90,6 @@
 
 <div *ngIf="pregunta!=''">
 
-
-  
-
 <div class="demo1" >
   <div class="demo1__colored-blocks" name="girar" id="girar" *ngIf="vr!=' '" >
     
@@ -124,9 +121,11 @@
                a20,10 0 0,1 20,10 a17,17 0 0,1 -34,0 L55,83 
                l0,-61 L40,28" />
     </svg>
+    
 <div style="  display: flex;
 align-items: center;
 justify-content: center; " *ngIf="modo=='verdadOREto'">
+
     <button mat-raised-button color="primary" *ngIf="!vrFire" (click)="clickVerdad();vr='verdad'" style="margin:7%;width: 100px;
     height: 50px;">Verdad</button>
     <button mat-raised-button color="primary" *ngIf="vrFire" (click)="clickVerdad();vr='verdad'" class="buttonOnFire" style="margin:7%;width: 100px;
@@ -146,7 +145,7 @@ justify-content: center; " *ngIf="modo=='verdadOREto'">
 
 
 </div>
-<button (click)="jugando=false; pregunta=''; modo=''" class="back">
+<button (click)="jugando=false; pregunta=''; modo=''; vr=''; vrFire=false" class="back">
   Parar
 </button>
 <button (click)="fire()" *ngIf="modo=='modoJugar' || modo=='verdadOREto' && !vrFire" class="fire" >
