--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -809,7 +809,7 @@ $size: 5px;
 
 .buttonOnFire{
   animation: burn 1000ms ease-out forwards infinite;
-      
+      background: red;
       &::before {
         content: '';
         position: absolute;
@@ -831,32 +831,6 @@ $size: 5px;
         border-radius: 100%;
         animation: flare 1000ms ease-out forwards infinite;
       }
-    &:hover {
-      // box-shadow: 0 0 20px 10px rgba(230, 30, 10, 0.6);
-      animation: burn 1000ms ease-out forwards infinite;
-      
-      &::before {
-        content: '';
-        position: absolute;
-        left: 40px;
-        width: 100px;
-        height: 40px;
-        background: rgba(255, 230, 110, 1);
-        border-radius: 100%;
-        animation: flare 1000ms ease-out forwards infinite;
-      }
-  
-      &::after {
-        content: '';
-        position: absolute;
-        right: 40px;
-        width: 100px;
-        height: 40px;
-        background: rgba(255, 230, 110, 1);
-        border-radius: 100%;
-        animation: flare 1000ms ease-out forwards infinite;
-      }
-    }
   }
   
   @keyframes flare {
